[package]
name = "locky"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "build_protos"
required-features = ["build-protos"]

[features]
default = ["tonic/tls-roots"]
build-protos = ["tonic-build"]
tls-webpki-roots = ["tonic/tls-webpki-roots"]

[dependencies]
aes = "0.8.3"
prost = "0.12.3"
tonic = {version = "0.11.0", features = ["tls"] }
ml-kem-rs = "0.1.1"
tonic-build = {version = "0.11.0", optional = true}
zeroize = "1.7.0"

[dev-dependencies]
tokio = { version = "1.36.0", features = ["rt", "macros"] }