[package]
name = "locky"
version = "0.0.1"
edition = "2021"
readme = "README.md"

[[bin]]
name = "build_protos"
required-features = ["build-protos"]

[features]
default = ["tonic/tls-roots"]
build-protos = ["tonic-build"]
tls-webpki-roots = ["tonic/tls-webpki-roots"]

[dependencies]
aes-kw = "0.2.1"
ml-kem-rs = "0.1.1"
prost = "0.12.3"
tonic = {version = "0.11.0", features = ["tls"] }
tonic-build = {version = "0.11.0", optional = true}
zeroize = "1.7.0"

[dev-dependencies]
tokio = { version = "1.36.0", features = ["rt", "macros"] }
tokio-test = "0.4.3"
aes-gcm = "0.10.3"
